IntervalData.getObservations now includes time datum
- Only included if they are set.
- They are labeled as "String" values
- The are formatted as ISO 8601 date/time